可调试，启用flex，bison的调试开关。

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -14,6 +14,7 @@ BISON_TARGET(
   src/parser.y
   ${CMAKE_BINARY_DIR}/parser.cpp
   DEFINES_FILE ${CMAKE_BINARY_DIR}/parser.tab.h       # ← 关键：必须加上这个关键字
+  COMPILE_FLAGS "-t"  # 打印调试信息
 )
 
 # 2) Flex：生成 lexer.cpp
