--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -34,10 +34,17 @@ add_executable(Compiler
   src/main.cpp
   src/ast.cpp   
   src/SemanticAnalyzer.cpp
+  src/IRGenerator.cpp
+  src/CodeGenerator.cpp
+  src/Optimizer.cpp
   src/ast.hpp
   src/lexer.l
   src/parser.y
   src/SemanticAnalyzer.hpp
+  src/ir.hpp
+  src/IRGenerator.hpp
+  src/CodeGenerator.hpp
+  src/Optimizer.hpp
 )
 
 # 5) »√±‡“Î∆˜ƒ‹’“µΩ parser.tab.h
