--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(Compiler
   src/GreedyAllocator.cpp
   src/SmartSpillAllocator.cpp
   src/ConstantPropagationAnalyzer.cpp
+  src/AvailableExpressionsAnalyzer.cpp
   src/ast.hpp
   src/lexer.l
   src/parser.y
@@ -58,6 +59,7 @@ add_executable(Compiler
   src/GreedyAllocator.hpp
   src/SmartSpillAllocator.hpp
   src/ConstantPropagationAnalyzer.hpp
+  src/AvailableExpressionsAnalyzer.hpp
 )
 
 # 5) »√±‡“Î∆˜ƒ‹’“µΩ parser.tab.h
